fixed spacing issues with

--- a/_Global/css/main.css
+++ b/_Global/css/main.css
@@ -69,9 +69,9 @@ section.text {padding-bottom: 10%;}
 
 .story .gif-copy-container {height:315px;}
 .story .gif { display:none; height:75%; }
-.gif.glasses { background:url('/_Global/images/gifs/glasses.gif') no-repeat center }
-.gif.poop { background:url('/_Global/images/gifs/poop.gif') no-repeat center; padding-top:90px; }
-.gif.talk { background:url('/_Global/images/gifs/talk.gif') no-repeat center; }
+.gif.glasses { background:url('/_Global/images/gifs/glasses.gif') no-repeat center; background-size: contain; }
+.gif.poop { background:url('/_Global/images/gifs/poop.gif') no-repeat center; background-size: contain; }
+.gif.talk { background:url('/_Global/images/gifs/talk.gif') no-repeat center; background-size: contain; }
 
 .story .copy span { color: rgb(255, 255, 255); font-style: italic; }
 .story .copy {
@@ -127,7 +127,7 @@ section.parallax > div {
 .contact-wrapper > div { height:100%; width:15%; display:inline-block; transition: background 0.2s ease-in-out;-webkit-transition: background 0.2s ease-in-out;-moz-transition: background 0.2s ease-in-out;-o-transition: background 0.2s ease-in-out;}
 .contact-wrapper a {display:block;height:100%;}
 
-#f1_container {
+.f1_container {
     position: relative;
     z-index: 1;
     perspective: 1000;
@@ -137,7 +137,7 @@ section.parallax > div {
     padding-right:10px;
 }
 
-#f1_card {
+.f1_card {
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
@@ -149,7 +149,7 @@ section.parallax > div {
     -moz-transition: all 0.3s linear;
     -o-transition: all 0.3s linear;
 }
-#f1_container:hover #f1_card {
+.f1_container:hover .f1_card {
     transform: rotateX(180deg);
     -webkit-transform: rotateX(-180deg);
     -moz-transform: rotateX(-180deg);
